tdf#153243 simplify "Numbering Captions by Chapter" label
    Remove "Captions" because not needed in context.

    For:
       - Insert - Caption - Options dialog
       - Tools / Options / Writer / Autocaption dialog

Change-Id: I97e64887026dd798cdec58cbca93d73c21515ef3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146207
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/captionoptions.ui
+++ b/sw/uiconfig/swriter/ui/captionoptions.ui
@@ -165,7 +165,7 @@
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="captionoptions|label1">Numbering Captions by Chapter</property>
+                    <property name="label" translatable="yes" context="captionoptions|label1">Numbering by Chapter</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
