--- a/sw/uiconfig/swriter/ui/optcaptionpage.ui
+++ b/sw/uiconfig/swriter/ui/optcaptionpage.ui
@@ -324,7 +324,7 @@
                   <object class="GtkLabel" id="label11">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="optcaptionpage|label11">Numbering Captions by Chapter</property>
+                    <property name="label" translatable="yes" context="optcaptionpage|label11">Numbering by Chapter</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
