add truncate-multiline for consistency
Change-Id: I21263263ec9fc9d9e39e7b2ec32b54a7a75323a4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146438
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/langtoolconfigpage.ui
+++ b/cui/uiconfig/ui/langtoolconfigpage.ui
@@ -100,6 +100,7 @@
                           <object class="GtkEntry" id="baseurl">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="truncate-multiline">True</property>
                             <property name="hexpand">True</property>
                           </object>
                           <packing>
@@ -138,6 +139,7 @@
                         <child>
                           <object class="GtkEntry" id="username">
                             <property name="visible">True</property>
+                            <property name="truncate-multiline">True</property>
                             <property name="can_focus">True</property>
                           </object>
                           <packing>
@@ -148,6 +150,7 @@
                         <child>
                           <object class="GtkEntry" id="apikey">
                             <property name="visible">True</property>
+                            <property name="truncate-multiline">True</property>
                             <property name="can_focus">True</property>
                           </object>
                           <packing>
@@ -217,6 +220,7 @@
                         <child>
                           <object class="GtkEntry" id="restprotocol">
                             <property name="visible">True</property>
+                            <property name="truncate-multiline">True</property>
                             <property name="can_focus">True</property>
                           </object>
                           <packing>
