--- a/cui/uiconfig/ui/widgettestdialog.ui
+++ b/cui/uiconfig/ui/widgettestdialog.ui
@@ -64,6 +64,7 @@
                   <object class="GtkEntry" id="entry_box_1">
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
+                    <property name="truncate-multiline">True</property>
                     <property name="text" translatable="no">Editable Entry</property>
                   </object>
                   <packing>
@@ -76,6 +77,7 @@
                     <property name="visible">True</property>
                     <property name="sensitive">False</property>
                     <property name="can-focus">True</property>
+                    <property name="truncate-multiline">True</property>
                     <property name="text" translatable="no">Disabled Entry</property>
                   </object>
                   <packing>
@@ -95,6 +97,7 @@
                     <child internal-child="entry">
                       <object class="GtkEntry">
                         <property name="sensitive">False</property>
+                        <property name="truncate-multiline">True</property>
                         <property name="can-focus">False</property>
                       </object>
                     </child>
@@ -198,6 +201,7 @@
                     <child>
                       <object class="GtkSpinButton" id="spin_btn_1">
                         <property name="visible">True</property>
+                        <property name="truncate-multiline">True</property>
                         <property name="can-focus">True</property>
                       </object>
                       <packing>
@@ -224,6 +228,7 @@
                       <object class="GtkSpinButton" id="spin_btn_2">
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
+                        <property name="truncate-multiline">True</property>
                         <property name="can-focus">True</property>
                       </object>
                       <packing>
@@ -271,6 +276,7 @@
                     <child internal-child="entry">
                       <object class="GtkEntry">
                         <property name="can-focus">False</property>
+                        <property name="truncate-multiline">True</property>
                         <property name="text" translatable="no">Test 3</property>
                       </object>
                     </child>
