add missing id-column
Change-Id: Ia6b1a4daa2a3327faa33d60289c4dd4c12deefbc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146441
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/widgettestdialog.ui
+++ b/cui/uiconfig/ui/widgettestdialog.ui
@@ -94,6 +94,7 @@
                     <property name="button-sensitivity">off</property>
                     <property name="has-entry">True</property>
                     <property name="entry-text-column">0</property>
+                    <property name="id-column">1</property>
                     <child internal-child="entry">
                       <object class="GtkEntry">
                         <property name="sensitive">False</property>
@@ -273,6 +274,7 @@
                     <property name="model">liststore1</property>
                     <property name="has-entry">True</property>
                     <property name="entry-text-column">0</property>
+                    <property name="id-column">1</property>
                     <child internal-child="entry">
                       <object class="GtkEntry">
                         <property name="can-focus">False</property>
