add truncate-multiline for consistency
Change-Id: I62de1820479f658076621ec0a62df967055adc4f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146475
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/optdeeplpage.ui
+++ b/cui/uiconfig/ui/optdeeplpage.ui
@@ -88,6 +88,7 @@
               <object class="GtkEntry" id="apiurl">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="truncate-multiline">True</property>
                 <property name="hexpand">True</property>
               </object>
               <packing>
@@ -99,6 +100,7 @@
               <object class="GtkEntry" id="authkey">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="truncate-multiline">True</property>
                 <property name="hexpand">True</property>
               </object>
               <packing>
