leader of group should default to active
Change-Id: I1c49b227e63f01ffdd1c3b427ef780ea38a6d1ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146476
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/sd/uiconfig/simpress/ui/pmsummarypage.ui
+++ b/sd/uiconfig/simpress/ui/pmsummarypage.ui
@@ -66,6 +66,7 @@
                 <property name="receives-default">False</property>
                 <property name="use-underline">True</property>
                 <property name="draw-indicator">True</property>
+                <property name="active">True</property>
               </object>
               <packing>
                 <property name="left-attach">0</property>
