--- a/sw/uiconfig/swriter/ui/pagenumberdlg.ui
+++ b/sw/uiconfig/swriter/ui/pagenumberdlg.ui
@@ -4,7 +4,9 @@
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkDialog" id="PageNumberDialog">
     <property name="can-focus">False</property>
+    <property name="border-width">6</property>
     <property name="title" translatable="yes" context="pagenumberdlg|PageNumberDialog">Page Number Wizard</property>
+    <property name="modal">True</property>
     <property name="default-width">0</property>
     <property name="default-height">0</property>
     <property name="type-hint">dialog</property>
@@ -78,21 +80,19 @@
               <object class="GtkBox" id="leftVBox">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-end">10</property>
-                <property name="margin-bottom">10</property>
+                <property name="margin-end">12</property>
+                <property name="margin-bottom">12</property>
                 <property name="hexpand">True</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">6</property>
                 <child>
                   <object class="GtkLabel" id="positionLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="halign">start</property>
-                    <property name="xpad">7</property>
-                    <property name="ypad">7</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|positionLabel">Position:</property>
-                    <accessibility>
-                      <relation type="label-for" target="positionCombo"/>
-                    </accessibility>
+                    <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">positionCombo</property>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="positionLabel-atkobject">
                         <property name="AtkObject::accessible-name" translatable="yes" context="pagenumberdlg|positionLabel-atkobject">Position</property>
@@ -114,9 +114,6 @@
                       <item translatable="yes" context="pagenumberdlg|liststore2">Top of page (Header)</item>
                       <item translatable="yes" context="pagenumberdlg|liststore2">Bottom of page (Footer)</item>
                     </items>
-                    <accessibility>
-                      <relation type="labelled-by" target="positionLabel"/>
-                    </accessibility>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="positionCombo-atkobject">
                         <property name="AtkObject::accessible-description" translatable="yes" context="pagenumbering|extended_tip|positionCombo">Insert page number in footer.</property>
@@ -134,12 +131,10 @@
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="halign">start</property>
-                    <property name="xpad">7</property>
-                    <property name="ypad">7</property>
+                    <property name="margin-top">6</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|alignmentLabel">Alignment:</property>
-                    <accessibility>
-                      <relation type="label-for" target="alignmentCombo"/>
-                    </accessibility>
+                    <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">alignmentCombo</property>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="alignmentLabel-atkobject">
                         <property name="AtkObject::accessible-name" translatable="yes" context="pagenumberdlg|alignmentLabel-atkobject">Alignment</property>
@@ -162,9 +157,6 @@
                       <item translatable="yes" context="pagenumberdlg|liststore1">Center</item>
                       <item translatable="yes" context="pagenumberdlg|liststore1">Right</item>
                     </items>
-                    <accessibility>
-                      <relation type="labelled-by" target="alignmentLabel"/>
-                    </accessibility>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="alignmentCombo-atkobject">
                         <property name="AtkObject::accessible-description" translatable="yes" context="pagenumbering|extended_tip|alignmentCombo">Align page number in page footer or header.</property>
@@ -188,8 +180,7 @@
               <object class="GtkBox" id="rightVBox">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-end">10</property>
-                <property name="margin-bottom">10</property>
+                <property name="margin-bottom">12</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkLabel" id="previewLabel">
