--- a/cui/uiconfig/ui/optdeeplpage.ui
+++ b/cui/uiconfig/ui/optdeeplpage.ui
@@ -1,117 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="cui">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="OptDeeplPage">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="orientation">vertical</property>
     <child>
+      <!-- n-columns=1 n-rows=3 -->
       <object class="GtkGrid" id="grid1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="column_homogeneous">True</property>
+        <property name="can-focus">False</property>
+        <property name="column-homogeneous">True</property>
         <child>
           <object class="GtkLabel" id="label1">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="halign">start</property>
             <property name="xpad">5</property>
             <property name="ypad">5</property>
             <property name="label" translatable="yes" context="optdeeplpage|label1">DeepL API Options</property>
-            <property name="use_underline">True</property>
-            <property name="mnemonic_widget">grid1</property>
+            <property name="use-underline">True</property>
+            <property name="mnemonic-widget">grid1</property>
             <attributes>
               <attribute name="weight" value="bold"/>
             </attributes>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLinkButton" id="privacy">
             <property name="label" translatable="yes" context="optdeeplpage|privacy">Please read the privacy policy</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
             <property name="halign">start</property>
             <property name="relief">none</property>
             <property name="uri">https://www.deepl.com/privacy/</property>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
+          <!-- n-columns=2 n-rows=2 -->
           <object class="GtkGrid" id="grid2">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="margin_start">5</property>
-            <property name="margin_end">5</property>
-            <property name="margin_top">5</property>
-            <property name="margin_bottom">5</property>
-            <property name="row_spacing">6</property>
-            <property name="column_spacing">5</property>
+            <property name="can-focus">False</property>
+            <property name="margin-start">5</property>
+            <property name="margin-end">5</property>
+            <property name="margin-top">5</property>
+            <property name="margin-bottom">5</property>
+            <property name="row-spacing">6</property>
+            <property name="column-spacing">5</property>
             <child>
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="halign">start</property>
                 <property name="label" translatable="yes" context="optdeeplpage|privacy">API URL:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">apiurl</property>
+                <property name="use-underline">True</property>
+                <property name="mnemonic-widget">apiurl</property>
               </object>
               <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
+                <property name="left-attach">0</property>
+                <property name="top-attach">0</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="halign">start</property>
-                <property name="margin_end">5</property>
+                <property name="margin-end">5</property>
                 <property name="label" translatable="yes" context="optdeeplpage|label3">Authentication key:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">authkey</property>
+                <property name="use-underline">True</property>
+                <property name="mnemonic-widget">authkey</property>
               </object>
               <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">1</property>
+                <property name="left-attach">0</property>
+                <property name="top-attach">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkEntry" id="apiurl">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="truncate-multiline">True</property>
+                <property name="can-focus">True</property>
                 <property name="hexpand">True</property>
+                <property name="truncate-multiline">True</property>
               </object>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">0</property>
+                <property name="left-attach">1</property>
+                <property name="top-attach">0</property>
               </packing>
             </child>
             <child>
               <object class="GtkEntry" id="authkey">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="truncate-multiline">True</property>
+                <property name="can-focus">True</property>
                 <property name="hexpand">True</property>
+                <property name="truncate-multiline">True</property>
               </object>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">1</property>
+                <property name="left-attach">1</property>
+                <property name="top-attach">1</property>
               </packing>
             </child>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">2</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">2</property>
           </packing>
         </child>
       </object>
