add missing mnemonic-widget
Change-Id: Ib0b53fe8fed8ca1d53b7691a8609ce1e14bcce89
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146490
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/qrcodegen.ui
+++ b/cui/uiconfig/ui/qrcodegen.ui
@@ -116,6 +116,7 @@
                         <property name="valign">start</property>
                         <property name="label" translatable="yes" context="qrcodegen|label_text" comments="Text to be stored in the QR">URL/Text:</property>
                         <property name="use-underline">True</property>
+                        <property name="mnemonic-widget">edit_text</property>
                         <property name="xalign">0</property>
                       </object>
                       <packing>
