--- a/sw/uiconfig/swriter/ui/pagenumberdlg.ui
+++ b/sw/uiconfig/swriter/ui/pagenumberdlg.ui
@@ -11,30 +11,14 @@
     <property name="default-height">0</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
-      <object class="GtkBox" id="mainVBox">
+      <object class="GtkBox" id="dialog-vbox1">
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child internal-child="action_area">
-          <object class="GtkButtonBox" id="buttonBox">
+          <object class="GtkButtonBox" id="dialog-action_area1">
             <property name="can-focus">False</property>
             <property name="layout-style">end</property>
-            <child>
-              <object class="GtkButton" id="help">
-                <property name="label" translatable="yes" context="stock">_Help</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-                <property name="halign">start</property>
-                <property name="use-underline">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-                <property name="secondary">True</property>
-              </packing>
-            </child>
             <child>
               <object class="GtkButton" id="ok">
                 <property name="label" translatable="yes" context="stock">_OK</property>
@@ -44,9 +28,9 @@
                 <property name="use-underline">True</property>
               </object>
               <packing>
-                <property name="expand">True</property>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
@@ -58,9 +42,24 @@
                 <property name="use-underline">True</property>
               </object>
               <packing>
-                <property name="expand">True</property>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="help">
+                <property name="label" translatable="yes" context="stock">_Help</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-underline">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">2</property>
+                <property name="secondary">True</property>
               </packing>
             </child>
           </object>
@@ -75,13 +74,11 @@
           <object class="GtkBox" id="HBox">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="spacing">29</property>
+            <property name="spacing">12</property>
             <child>
               <object class="GtkBox" id="leftVBox">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-end">12</property>
-                <property name="margin-bottom">12</property>
                 <property name="hexpand">True</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
@@ -180,19 +177,15 @@
               <object class="GtkBox" id="rightVBox">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-bottom">12</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkLabel" id="previewLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="xpad">7</property>
-                    <property name="ypad">7</property>
+                    <property name="halign">start</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|previewLabel">Preview</property>
-                    <property name="justify">center</property>
-                    <accessibility>
-                      <relation type="label-for" target="previewImage"/>
-                    </accessibility>
+                    <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">previewImage</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -204,9 +197,6 @@
                   <object class="GtkImage" id="previewImage">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <accessibility>
-                      <relation type="labelled-by" target="previewLabel"/>
-                    </accessibility>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -231,9 +221,9 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-11">help</action-widget>
       <action-widget response="-5">ok</action-widget>
       <action-widget response="-6">cancel</action-widget>
+      <action-widget response="-11">help</action-widget>
     </action-widgets>
   </object>
 </interface>
