--- a/sd/uiconfig/simpress/ui/customanimationspanel.ui
+++ b/sd/uiconfig/simpress/ui/customanimationspanel.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sd">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="adjustment1">
@@ -20,7 +20,7 @@
   <object class="GtkImage" id="image_add">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
-    <property name="icon_name">cmd/sc_add.png</property>
+    <property name="icon-name">cmd/sc_add.png</property>
   </object>
   <object class="GtkImage" id="image_down">
     <property name="visible">True</property>
@@ -35,7 +35,7 @@
   <object class="GtkImage" id="image_remove">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
-    <property name="icon_name">cmd/sc_list_remove.png</property>
+    <property name="icon-name">cmd/sc_list_remove.png</property>
   </object>
   <object class="GtkImage" id="image_up">
     <property name="visible">True</property>
@@ -180,8 +180,9 @@
         </child>
       </object>
       <packing>
-        <property name="resize">True</property>
-        <property name="shrink">False</property>
+        <property name="expand">True</property>
+        <property name="fill">True</property>
+        <property name="position">0</property>
       </packing>
     </child>
     <child>
@@ -677,8 +678,9 @@
         </child>
       </object>
       <packing>
-        <property name="resize">True</property>
-        <property name="shrink">False</property>
+        <property name="expand">True</property>
+        <property name="fill">True</property>
+        <property name="position">1</property>
       </packing>
     </child>
     <child internal-child="accessible">
