(related tdf#153417) rename "Back" to "Reset"
Change-Id: I70c79f7a40889bcca3aed3d2309779091967a2e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146532
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/cui/uiconfig/ui/editmodulesdialog.ui
+++ b/cui/uiconfig/ui/editmodulesdialog.ui
@@ -231,7 +231,7 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="back">
-                            <property name="label" translatable="yes" context="editmodulesdialog|back">_Back</property>
+                            <property name="label" translatable="yes" context="editmodulesdialog|back">_Reset</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
