tdf#152605  change "heading level" to "outline level" in UI
    This patch addresses extended tips in the UI that refer to a heading
    or chapter level, with the aim to remove this kind of terminology.
    In many cases, tooltips are added, and extended tips are corrected.
    Also, add "Outline" in front of "level" in the UI for Caption
    Options and AutoCaption.

Change-Id: Idcf16892599913af31372b89d180251c86945d21
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146622
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/captionoptions.ui
+++ b/sw/uiconfig/swriter/ui/captionoptions.ui
@@ -102,9 +102,10 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="hexpand">True</property>
+                        <property name="tooltip_text" translatable="yes" context="captionoptions|tooltip_text|level">Specify the maximum outline level of the immediately prior heading number to include in the caption number.</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|level">Select the number of outline levels from the top of the chapter hierarchy down to include in the caption label.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|level">Specify the maximum outline level of the immediately prior heading number to include in the caption number. For numbers to appear, the selected heading must have numbering applied.</property>
                           </object>
                         </child>
                       </object>
@@ -135,7 +136,7 @@
                       <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes" context="captionoptions|label5">_Level:</property>
+                        <property name="label" translatable="yes" context="captionoptions|label5">_Outline level:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">level</property>
                         <property name="xalign">1</property>
