--- a/sw/uiconfig/swriter/ui/tocindexpage.ui
+++ b/sw/uiconfig/swriter/ui/tocindexpage.ui
@@ -285,9 +285,10 @@
                         <property name="activates-default">True</property>
                         <property name="truncate-multiline">True</property>
                         <property name="adjustment">adjustment1</property>
+                        <property name="tooltip_text" translatable="yes" context="tocindexpage|level|tooltip_text">Enter the number of outline levels to include in the index.</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|level">Enter the number of heading levels to include in the index.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|level">Enter the number of outline levels to include in the index. All headings are included that have an outline level less than or equal to the specified value.</property>
                           </object>
                         </child>
                       </object>
