tdf#153229 add an extended tip for this new widget
and fix mnemonic target

Change-Id: Iad68048a6f0f824b774306033fdbbfe65b152804
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146675
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/optviewpage.ui
+++ b/cui/uiconfig/ui/optviewpage.ui
@@ -506,7 +506,7 @@
                     </items>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="appearance-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip | iconstyle">Specifies the icon style for icons in toolbars and dialogs.</property>
+                        <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip | appearance">Specifies whether to follow the system appearance mode or override Dark or Light.</property>
                       </object>
                     </child>
                   </object>
@@ -521,7 +521,7 @@
                     <property name="can-focus">False</property>
                     <property name="label" translatable="yes" context="optviewpage|label7">Mode:</property>
                     <property name="use-underline">True</property>
-                    <property name="mnemonic-widget">iconstyle</property>
+                    <property name="mnemonic-widget">appearance</property>
                     <property name="xalign">0</property>
                   </object>
                   <packing>
