--- a/desktop/uiconfig/ui/extensionmanager.ui
+++ b/desktop/uiconfig/ui/extensionmanager.ui
@@ -5,7 +5,7 @@
   <object class="GtkDialog" id="ExtensionManagerDialog">
     <property name="can-focus">False</property>
     <property name="border-width">6</property>
-    <property name="title" translatable="yes" context="extensionmanager|ExtensionManagerDialog">Extension Manager</property>
+    <property name="title" translatable="yes" context="extensionmanager|ExtensionManagerDialog">Extensions</property>
     <property name="default-width">0</property>
     <property name="default-height">0</property>
     <property name="type-hint">dialog</property>
