--- a/desktop/uiconfig/ui/updateinstalldialog.ui
+++ b/desktop/uiconfig/ui/updateinstalldialog.ui
@@ -175,7 +175,7 @@
     </child>
     <child internal-child="accessible">
       <object class="AtkObject" id="UpdateInstallDialog-atkobject">
-        <property name="AtkObject::accessible-description" translatable="yes" context="updateinstalldialog|extended_tip|UpdateInstallDialog">Click the Check for Updates button in the Extension Manager to check for online updates for all installed extensions. To check for online updates for only the selected extension, right-click to open the context menu, then choose Update.</property>
+        <property name="AtkObject::accessible-description" translatable="yes" context="updateinstalldialog|extended_tip|UpdateInstallDialog">Click the Check for Updates button in the Extensions dialog to check for online updates for all installed extensions. To check for online updates for only the selected extension, right-click to open the context menu, then choose Update.</property>
       </object>
     </child>
   </object>
